--- a/src/components/slider/MainContent.astro
+++ b/src/components/slider/MainContent.astro
@@ -1,7 +1,7 @@
 ---
 const titles = ["Explore", "Analyse"]
  const data = {
-    textColor: 'text-[#ed707e]',
+    textColor: 'text-[#EE7380]',
     description: 'Data-driven success',
     buttonLabel: 'Start Now',
     circleBackgroundColor: 'bg-[#feeff1]',
@@ -77,7 +77,7 @@ const titles = ["Explore", "Analyse"]
   <p class="font-normal tracking-wide mb-14 text-[42px]">
     {data.description}
   </p>
-  <button class="h-10 px-10 py-2 bg-[#ed707e] rounded-3xl text-white text-base font-medium leading-normal tracking-wide hover:bg-[#1a1a2e] active:bg-[#33334d] transition-colors duration-300">
+  <button class="h-10 px-10 py-2 bg-[#EE7380] rounded-3xl text-white text-base font-medium leading-normal tracking-wide hover:bg-[#1a1a2e] active:bg-[#33334d] transition-colors duration-300">
     {data.buttonLabel}
   </button>
 </div>
