--- a/src/components/slider/Swiper.astro
+++ b/src/components/slider/Swiper.astro
@@ -5,7 +5,7 @@ import Circle from "./Circle.astro";
 const slides = [
   {
     title: 'ION Explore',
-    textColor: 'text-[#ed707e]',
+    textColor: 'text-[#EE7380]',
     description: 'Data-driven success',
     buttonLabel: 'Start Now',
     circleBackgroundColor: 'bg-[#feeff1]',
