--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -14,12 +14,12 @@ let buttonStyle = baseButtonStyle + " " + className;
 
 if (type === "fill") {
   buttonStyle +=
-    " bg-[#ed707e] text-white justify-start hover:bg-[#d55e6b] active:bg-[#bb4d58]";
+    " bg-[#EE7380] text-white justify-start hover:bg-[#d55e6b] active:bg-[#bb4d58]";
 }
 
 if (type === "outline") {
   buttonStyle +=
-    " border border-[#ed707e] text-[#ed707e] hover:bg-[#ed707e] hover:text-white active:bg-[#d55e6b] active:border-[#d55e6b]";
+    " border border-[#EE7380] text-[#EE7380] hover:bg-[#EE7380] hover:text-white active:bg-[#d55e6b] active:border-[#d55e6b]";
 }
 ---
 
