--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -14,7 +14,7 @@ console.log('articles:', articles);
   <Navbar />
   <main class="px-8 relative">
     <section class="min-h-[40vh] flex flex-col justify-center items-center bg-white">
-      <h1 class="text-center text-[#ed707e] text-5xl font-extrabold  tracking-wide mb-6">
+      <h1 class="text-center text-[#EE7380] text-5xl font-extrabold  tracking-wide mb-6">
         Our Blog
       </h1>
       <p class="text-center text-[#0d0c22] text-lg font-normal  max-w-2xl">
