--- a/src/pages/explore.astro
+++ b/src/pages/explore.astro
@@ -77,7 +77,7 @@ const analyzeTabsData = [
     </div>
     <div class="flex flex-col justify-between gap-2 w-1/2">
       <p class="text-[27px] text-[#0D0C22] font-medium">IONKOL</p>
-      <p class="text-[54px] text-[#ed707e]  font-extrabold">Explore</p>
+      <p class="text-[54px] text-[#EE7380]  font-extrabold">Explore</p>
       <p class="text-lg  mb-4 text-left lg:w-[75%]">
         Track your own data to see where you are doing well and where you have more potential for
         growth. Access all our metrics to see where you stand and understand how you can grow.
@@ -183,7 +183,7 @@ const analyzeTabsData = [
     <div class="flex justify-center items-center lg:w-1/2 p-6">
       <div class="max-w-[654px]">
         <h1
-          class="text-center lg:text-left text-[#ed707e] text-5xl font-extrabold  tracking-wide mb-4">
+          class="text-center lg:text-left text-[#EE7380] text-5xl font-extrabold  tracking-wide mb-4">
           Contact us
         </h1>
         <p
