--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,10 +3,10 @@ import { Image } from "astro:assets";
 ---
 
 <footer
-  class="w-full bg-[#f9f9f9] flex flex-wrap flex-col md:flex-row justify-between px-8 md:px-16 lg:px-24 pt-10 pb-10 md:pb-0"
+  class="w-full bg-[#f9f9f9] flex flex-wrap flex-col md:flex-row justify-between px-8 md:px-16 lg:px-24 pt-12 pb-10 md:pb-0"
   role="contentinfo">
   
-  <div class="flex flex-col gap-2 mb-8 sm:mb-10 sm:text-center">
+  <div class="flex flex-col items-center lg:items-start gap-2 mb-8 sm:mb-10 sm:text-center">
     <Image src="/ionkolLogoNew.svg" alt="key" width={125} height={40} />
     <p
       class="text-lg text-left">
