style: add rounded div pricing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -270,7 +270,7 @@ const stats = [
     <!-- Achieve Goals section -->
     <section class="py-20 relative bg-white px-4 lg:px-12">
       <div
-        class="absolute rotate-180 rounded-full w-full h-[2000px] top-0 left-0 z-100"
+        class="absolute rotate-180 rounded-[100%] w-full h-screen top-20 left-0 z-100"
         style="background: linear-gradient(180deg, #FFFFFF 60.5%, #FFF9F9 100%);"
       >
       </div>
