--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,14 +4,13 @@ import { Image } from "astro:assets";
 
 <footer
   class="w-full bg-[#f9f9f9] flex flex-wrap flex-col md:flex-row justify-between px-8 md:px-16 lg:px-24 pt-12 pb-10 md:pb-0"
-  role="contentinfo">
-  
-  <div class="flex flex-col items-center lg:items-start gap-2 mb-8 sm:mb-10 sm:text-center">
+  role="contentinfo"
+>
+  <div
+    class="flex flex-col items-center lg:items-start gap-2 mb-8 sm:mb-10 sm:text-center"
+  >
     <Image src="/ionkolLogoNew.svg" alt="key" width={125} height={40} />
-    <p
-      class="text-lg text-left">
-      Data-driven Success
-    </p>
+    <p class="text-lg text-left">Data-driven Success</p>
     <div class="w-56 border-1 border-red-200 border-t mt-2"></div>
 
     <div class="mt-5">
@@ -25,69 +24,59 @@ import { Image } from "astro:assets";
 
     <div class="mt-5">
       <Image src="/instagramLogo.png" alt="key" width={24} height={24} />
-
     </div>
   </div>
 
-  <nav aria-label="Footer Navigation" class="flex flex-wrap gap-8 sm:gap-12 justify-center">
+  <nav
+    aria-label="Footer Navigation"
+    class="flex flex-wrap gap-8 sm:gap-12 justify-center"
+  >
     <div class="flex flex-col h-full relative">
-    <div>
-      <h3
-        class="text-[#0d0c22] text-lg font-semibold  leading-normal tracking-tight mb-2 text-center sm:text-left">
-        Services
-      </h3>
-      <ul class="flex flex-col text-center sm:text-left">
-        <li>
-          <a
-            href="#"
-            class="text-lg leading-normal tracking-tight">
-            Ion Explore
-          </a>
-        </li>
-        <li>
-          <a
-            href="#"
-            class="text-lg leading-normal tracking-tight">
-            Ion Analyze
-          </a>
-        </li>
-      </ul>
-    </div>
+      <div>
+        <h3
+          class="text-[#0d0c22] text-lg font-semibold leading-normal tracking-tight mb-2 text-center sm:text-left"
+        >
+          Services
+        </h3>
+        <ul class="flex flex-col text-center sm:text-left">
+          <li>
+            <a href="#" class="text-lg leading-normal tracking-tight">
+              Ion Explore
+            </a>
+          </li>
+          <li>
+            <a href="#" class="text-lg leading-normal tracking-tight">
+              Ion Analyze
+            </a>
+          </li>
+        </ul>
+      </div>
 
-    <div class="flex flex-row gap-4 absolute w-64 top-28 md:top-52 left-0">
-      <a
-        href="#"
-        class="text-lg leading-normal tracking-tight">
-        Privacy Policy
-      </a>
-      <span>|</span>
-      <a
-        href="#"
-        class="text-lg leading-normal tracking-tight">
-        Terms of Service
-      </a>
+      <div class="flex flex-row gap-4 absolute w-64 top-28 md:top-52 left-0">
+        <a href="#" class="text-lg leading-normal tracking-tight">
+          Privacy Policy
+        </a>
+        <span>|</span>
+        <a href="#" class="text-lg leading-normal tracking-tight">
+          Terms of Service
+        </a>
+      </div>
     </div>
-    
-
-  </div>
 
     <div>
       <h3
-        class="text-[#0d0c22] text-lg font-semibold  leading-normal tracking-tight mb-2 text-center sm:text-left">
+        class="text-[#0d0c22] text-lg font-semibold leading-normal tracking-tight mb-2 text-center sm:text-left"
+      >
         Get Started
       </h3>
       <ul class="flex flex-col text-center sm:text-left">
         <li>
-          <a
-            href="#"
-            class="text-lg leading-normal tracking-tight">
+          <a href="#" class="text-lg leading-normal tracking-tight">
             Book a demo
           </a>
         </li>
         <li>
-          <a
-            href="#"
-            class="text-lg leading-normal tracking-tight">
+          <a href="#" class="text-lg leading-normal tracking-tight">
             Contact us
           </a>
         </li>
@@ -96,37 +85,28 @@ import { Image } from "astro:assets";
 
     <div>
       <h3
-        class="text-[#0d0c22] text-lg font-semibold  leading-normal tracking-tight mb-2 text-center sm:text-left">
+        class="text-[#0d0c22] text-lg font-semibold leading-normal tracking-tight mb-2 text-center sm:text-left"
+      >
         Who We Are
       </h3>
       <ul class="flex flex-col text-center sm:text-left">
         <li>
-          <a
-            href="#"
-            class="text-lg leading-normal tracking-tight">
+          <a href="/aboutUs" class="text-lg leading-normal tracking-tight">
             About us
           </a>
         </li>
         <li>
-          <a
-            href="/blog"
-            class="text-lg leading-normal tracking-tight">
+          <a href="/blog" class="text-lg leading-normal tracking-tight">
             Blog
           </a>
         </li>
         <li>
-          <a
-            href="#"
-            class="text-lg leading-normal tracking-tight">
+          <a href="#" class="text-lg leading-normal tracking-tight">
             Case study
           </a>
         </li>
         <li>
-          <a
-            href="#"
-            class="text-lg leading-normal tracking-tight">
-            FAQs
-          </a>
+          <a href="#" class="text-lg leading-normal tracking-tight"> FAQs </a>
         </li>
         <!-- <li>
           <a
