feat: contact us page & start resources page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -76,7 +76,7 @@ import { Image } from "astro:assets";
           </a>
         </li>
         <li>
-          <a href="#" class="text-lg leading-normal tracking-tight">
+          <a href="/contactUs" class="text-lg leading-normal tracking-tight">
             Contact us
           </a>
         </li>
