--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -228,8 +228,10 @@ const stats = [
             height={128}
           />
           <div class="flex flex-col gap-6">
-            <div class="text-5xl font-semibold">
-              <span class="text-[#EE7380] mr-2">ION</span>Explore
+            <div class="text-5xl font-semibold flex flex-row gap-2">
+              <Image src="/ion.svg" alt="key" width={95} height={50} /><span
+                >Explore</span
+              >
             </div>
             <p class="text-xl">
               Discover and connect with creators who amplify your brand's
@@ -251,8 +253,10 @@ const stats = [
             height={128}
           />
           <div class="flex flex-col gap-6">
-            <div class="text-5xl font-semibold">
-              <span class="text-[#EE7380] mr-2">ION</span>Analyse
+            <div class="text-5xl font-semibold flex flex-row gap-2">
+              <Image src="/ion.svg" alt="key" width={95} height={50} /><span
+                >Analyse</span
+              >
             </div>
             <p class="text-xl">
               Evaluate the success of your influencer partnerships with
