--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,20 +1,21 @@
 ---
 import { Image } from "astro:assets";
 import Button from "./ui/Button.astro";
+import LanguageSwitcher from "../components/react/LanguageSwitcher";
 
 const navItems = [
   {
     link: "/features",
-    title: "Features"
-  }, 
+    title: "Features",
+  },
   {
     link: "/pricing",
-    title: "Pricing"
-  }, 
+    title: "Pricing",
+  },
   {
     link: "/resources",
-    title: "Resource Hub"
-  }, 
+    title: "Resource Hub",
+  },
 ];
 const SIGN_IN_URL = "https://app.ionkol.com/sign-in";
 const SIGN_UP_URL = "https://app.ionkol.com/sign-up";
@@ -22,10 +23,12 @@ const SIGN_UP_URL = "https://app.ionkol.com/sign-up";
 
 <header
   id="navbar"
-  class="w-full z-50 fixed top-0 left-0 h-[84px] px-[65px] py-[22px] bg-white justify-between items-center inline-flex transition-colors duration-300">
+  class="w-full z-50 fixed top-0 left-0 h-[84px] px-[65px] py-[22px] bg-white justify-between items-center inline-flex transition-colors duration-300"
+>
   <a
     href="/"
-    class="text-center text-[#0d0c22] text-[28px] font-bold  tracking-wide">
+    class="text-center text-[#0d0c22] text-[28px] font-bold tracking-wide"
+  >
     <Image src="/ionkolLogoNew.svg" alt="key" width={125} height={40} />
   </a>
 
@@ -35,27 +38,31 @@ const SIGN_UP_URL = "https://app.ionkol.com/sign-up";
     <label
       for="burger-toggle"
       class="cursor-pointer block space-y-1"
-      onclick="toggleMenu()">
+      onclick="toggleMenu()"
+    >
       <span class="block w-8 h-0.5 bg-black"></span>
       <span class="block w-8 h-0.5 bg-black"></span>
       <span class="block w-8 h-0.5 bg-black"></span>
     </label>
   </div>
 
-
   <div class="hidden items-center lg:flex gap-[2rem]">
-      <ul
-        class="flex gap-[2rem] list-none text-[#0d0c22] text-base font-normal  leading-normal tracking-tight">
-        {
-          navItems.map((item) => (
-            <a
-              href={`${item.link}`}
-              class="cursor-pointer text-[#0d0c22] hover:text-[#EE7380] active:text-[#d55e6b] transition-colors duration-300">
-              {item.title}
-            </a>
-          ))
-        }
-      </ul>
+    <ul
+      class="flex gap-[2rem] list-none text-[#0d0c22] text-base font-normal leading-normal tracking-tight"
+    >
+      {
+        navItems.map((item) => (
+          <a
+            href={`${item.link}`}
+            class="cursor-pointer text-[#0d0c22] hover:text-[#EE7380] active:text-[#d55e6b] transition-colors duration-300"
+          >
+            {item.title}
+          </a>
+        ))
+      }
+    </ul>
+
+    <LanguageSwitcher client:load />
     <a href={SIGN_UP_URL}> <Button text="Sign-up" type="outline" /></a>
     <a href={SIGN_IN_URL}> <Button text="Login" /></a>
   </div>
@@ -63,14 +70,16 @@ const SIGN_UP_URL = "https://app.ionkol.com/sign-up";
 
 <div
   id="menu"
-  class="lg:hidden fixed top-0 left-0 bg-white p-4 space-y-4 shadow-md top-[84px] left-0 w-full hidden z-50">
+  class="lg:hidden fixed top-0 left-0 bg-white p-4 space-y-4 shadow-md top-[84px] left-0 w-full hidden z-50"
+>
   <nav>
     <ul class="flex flex-col">
       {
         navItems.map((item) => (
           <a
             href={`#${item}`}
-            class="cursor-pointer py-2 text-center w-full hover:bg-[#fff7f8] text-[#0d0c22] hover:text-[#EE7380] active:text-[#d55e6b] transition-colors duration-300">
+            class="cursor-pointer py-2 text-center w-full hover:bg-[#fff7f8] text-[#0d0c22] hover:text-[#EE7380] active:text-[#d55e6b] transition-colors duration-300"
+          >
             {item}
           </a>
         ))
